--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100dvh;
 	z-index: 1000;
-	overflow: hidden;
+	// overflow: hidden;
 
 	&__close {
 		--top: 20rem;
@@ -40,6 +40,17 @@
 		width: 100%;
 		height: 100%;
 		background-color: rgba(0, 0, 0, 0.6);
+		z-index: 1;
+	}
+
+	&__content {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		pointer-events: none;
 	}
 
 	&.is-open {
